jenkins-deployment-script/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Prefix /eureka;
spec:
  rules:
  - host: eureka.guardianservices.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eureka-service
            port:
              number: 80
  # - host: auth.guardianservices.in
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: api-gateway
  #           port:
  #             number: 80
  # - host: sms.guardianservices.in
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: api-gateway
  #           port:
  #             number: 80
